# goldata

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: CIENCIA.md  modelos.md
goldata/: __init__.py  cache.py  cli.py  config.py  exceptions.py  logging_config.py  security.py
goldata/api/: main.py
goldata/api/routes/: __init__.py  health.py
goldata/data/: brasileirao.py  features.py  validators.py
goldata/db/: __init__.py  connection.py  models.py
goldata/metrics/: xmetrics.py
goldata/models/: base.py
goldata/models/betting/: __init__.py  backtest.py  kelly.py  markets.py  value_detector.py
goldata/models/fantasy/: __init__.py  cartola_predictor.py
goldata/models/injury/: __init__.py  risk_predictor.py
goldata/models/prediction/: __init__.py  dixon_coles.py  elo.py  monte_carlo.py  poisson.py
goldata/models/referee/: __init__.py  analyzer.py
goldata/models/scouting/: __init__.py  clustering.py  projection.py  similarity.py  valuation.py
goldata/models/tactical/: __init__.py  passing_network.py  pressing.py
goldata/models/transfers/: __init__.py  analyzer.py
goldata/models/xg/: __init__.py  advanced.py  basic.py  positional.py
goldata/reports/: __init__.py
goldata/viz/: pitch.py  radar.py
tests/: conftest.py  test_markets.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_100_coverage.py  test_cache.py  test_cli.py  test_config.py  test_coverage_gaps.py  test_db.py  test_exceptions.py  test_extra.py  test_final_100.py  test_security.py  test_truly_final.py  test_validators.py
tests/unit/data/: test_brasileirao.py  test_features.py
tests/unit/metrics/: test_xmetrics.py
tests/unit/models/: test_betting.py  test_injury_transfers_cartola_referee.py  test_prediction.py  test_scouting.py  test_tactical.py  test_xg_advanced.py  test_xg_basic.py  test_xg_positional.py
tests/unit/viz/: __init__.py  test_viz.py
